Update and rename yolov4_test.cfg to yolov4-obj.cfg

--- a/yolov4-obj.cfg
+++ b/yolov4-obj.cfg
@@ -1,11 +1,12 @@
 [net]
-batch=1
-subdivisions=1
-# Test
-#width=512
-#height=512
-width=608
-height=608
+# Testing
+#batch=1
+#subdivisions=1
+# Training
+batch=64
+subdivisions=16
+width=416
+height=416
 channels=3
 momentum=0.949
 decay=0.0005
@@ -14,7 +15,7 @@ saturation = 1.5
 exposure = 1.5
 hue=.1
 
-learning_rate=0.0013
+learning_rate=0.001
 burn_in=1000
 max_batches = 4000
 policy=steps
@@ -740,6 +741,7 @@ size=1
 stride=1
 pad=1
 activation=mish
+stopbackward=800
 
 ##########################
 
